cmake: Build HIDAPI on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -898,6 +898,10 @@ if(NOT ANDROID)
 			message(STATUS "Using static hidapi-hidraw from Externals")
 			add_subdirectory(Externals/hidapi/linux)
 			list(APPEND LIBS hidapi-hidraw udev)
+		elseif(MSVC)
+			message(STATUS "Using static hidapi-hid from Externals")
+			add_subdirectory(Externals/hidapi/windows)
+			list(APPEND LIBS hidapi-hid)
 		else()
 			message(STATUS "Using static hidapi-libusb from Externals")
 			add_subdirectory(Externals/hidapi/libusb)
