cmake: Build D3D and D3D12 video backends

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -275,6 +275,8 @@ set(LIBS ${LIBS} ${MBEDTLS_LIBRARIES})
 if(WIN32)
 	set(SRCS ${SRCS} HW/EXI/BBA-TAP/TAP_Win32.cpp HW/WiimoteReal/IOWin.cpp)
 	list(APPEND LIBS
+		videod3d
+		videod3d12
 		setupapi.lib
 		iphlpapi.lib
 	)
