--- a/Source/Core/VideoBackends/CMakeLists.txt
+++ b/Source/Core/VideoBackends/CMakeLists.txt
@@ -1,7 +1,12 @@
 add_subdirectory(OGL)
 add_subdirectory(Null)
 add_subdirectory(Software)
-if(NOT APPLE)
-add_subdirectory(Vulkan)
+
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  add_subdirectory(D3D)
+  add_subdirectory(D3D12)
 endif()
-# TODO: Add other backends here!
+
+if(NOT APPLE)
+  add_subdirectory(Vulkan)
+endif()
