cmake: Don't build traversal_server on Windows, it requires posix platform

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -98,4 +98,8 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 endif()
 
 add_dolphin_library(common "${SRCS}" "${LIBS}")
-add_executable(traversal_server TraversalServer.cpp)
+
+if(UNIX)
+	# Posix networking code needs to be fixed for Windows
+	add_executable(traversal_server TraversalServer.cpp)
+endif()
