SI_Device: Move the null device implementation to its own source files

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -118,6 +118,7 @@ set(SRCS	ActionReplay.cpp
 			HW/SI/SI_DeviceGCController.cpp
 			HW/SI/SI_DeviceGCSteeringWheel.cpp
 			HW/SI/SI_DeviceKeyboard.cpp
+			HW/SI/SI_DeviceNull.cpp
 			HW/Sram.cpp
 			HW/StreamADPCM.cpp
 			HW/SystemTimers.cpp
