--- a/Externals/libusb/libusb_static_2013.vcxproj
+++ b/Externals/libusb/libusb_static_2013.vcxproj
@@ -52,7 +52,7 @@
     <ClCompile Include="libusb\sync.c" />
     <ClCompile Include="libusb\os\threads_windows.c" />
     <ClCompile Include="libusb\os\windows_nt_common.c" />
-    <ClCompile Include="libusb\os\windows_winusb.c" />
+    <ClCompile Include="libusb\os\windows_usbdk.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="msvc\config.h" />
@@ -65,7 +65,7 @@
     <ClInclude Include="libusb\version_nano.h" />
     <ClInclude Include="libusb\os\windows_common.h" />
     <ClInclude Include="libusb\os\windows_nt_common.h" />
-    <ClInclude Include="libusb\os\windows_winusb.h" />
+    <ClInclude Include="libusb\os\windows_usbdk.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
